<resources>
    <string name="app_name">Vladcord</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="delete_friend">Delete chat</string>

    <string name="button_friends_list">Friends list</string>
    <string name="button_friends_requests_list">Friends Requests</string>

    <string name="add_friend_yes">Accept invite</string>
    <string name="not_add_friend">Decline invite</string>
    <string name="ask_add_friend">Add friend?</string>
    <string name="mute_friend">Mute</string>
    <string name="unmute_friend">Unmute</string>
    <string name="seen_message">seen</string>
    <string name="send_request_for_add_friend">Request send to friends</string>
    <string name="send_request_for_add_friend_false">You already send a request</string>


    <string name="last_seen">Last_seen\</string>
    <string name="you_logged">You are logged in</string>
    <string name="you_not_logged">You are not logged in, check your connection</string>
    <string name="choose_image">Select an image</string>
    <string name="has_rights_for_reading">Read permissions granted.</string>
    <string name="hasnt_rights_for_reading">No read rights were granted.</string>
    <string name="delivered">delivered</string>
    <string name="mute">Mute</string>

    <string name="account_label_settings">Account</string>
    <string name="tap_to_change_email">Tap to verify email</string>
    <string name="change_your_name">Change your name</string>
    <string name="add_edit_bio_settings">Add something about yourself</string>
    <string name="settings_profile">Settings</string>
    <string name="language_settings">Language</string>
    <string name="uploading">Uploading</string>
    <string name="uploaded">Uploaded</string>
    <string name="failed">\"Failed \"</string>
    <string name="bio">BIO</string>
    <string name="false_sented">false</string>


    <string name="add_friend">Add friend</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="create_group">Create Group</string>
    <string name="tap_to_choose_friend">Tap to choose friend to invite</string>



    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="galochka">✔</string>
    <string name="waiting_for_network">Waiting for network</string>
    <string name="friends_title">Friends</string>
    <string name="friends_requests_title">Friend requests</string>
    <string name="create_group_title">Create Group</string>
    <string name="forget_name_of_group">Please enter name of group</string>
    <string name="group_with_name">\"Group with name \"</string>
    <string name="created">\" created\"</string>
    <string name="groups_title">Groups</string>
    <string name="delivering"> </string>
    <string name="too_short_name">Too short name</string>
    <string name="too_long_name">Too long name</string>
    <string name="empty_field">Empty field</string>
    <string name="email_verification">Email Verification</string>
    <string name="verification_sent">\"Verification email sent to \"</string>
    <string name="failed_verification_sent">Failed to send verification email.</string>
    <string name="already_veryfied_email">You\'ve already verify email</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="download_photo_after_connecion">Photo will be download when connection will be available</string>
    <string name="add_few_words_yourself">Add a few words about yourself</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_email">Search by email</string>
    <string name="tap_to_choose_friend_to_invite">Tap to choose friend to invite</string>
    <string name="change_bio">Change Bio</string>
    <string name="change_name">Change Name</string>
    <string name="friends">Friends</string>
    <string name="input_name_of_your_group">Input name of your group</string>
    <string name="your_bio">Your bio</string>
    <string name="you_can_add_a_few_lines_about_yourself">You can add a few lines about yourself.</string>
    <string name="your_username">Your Username</string>
    <string name="minimum_length_is_5_characters_maximum_is_21_n_people_will_be_able_to_find_you_by_this_username">Minimum length is 5 characters. Maximum is 21 \n People will be able to find you by this username.</string>
    <string name="you_want_verify_your_email">You want verify your email?</string>
    <string name="sure">Sure</string>
    <string name="friend_requests">Friend requests</string>
    <string name="groups">Groups</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="add_friends">Add friends</string>
    <string name="leave_chat">Leave Chat</string>
    <string name="title_activity_name_change">Change Name</string>
    <string name="title_activity_bio_change">Change Bio</string>
    <string name="title_activity_group">Create Group</string>
    <string name="title_activity_groups">Groups</string>
    <string name="private_call">Private call</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="change_theme">Change theme</string>
</resources>