<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends_list"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_friends_request"
            android:icon="@mipmap/ic_friends_requests"
            android:title="@string/friend_requests" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/invite_friends" />

        <item
            android:id="@+id/nav_group_creation"
            android:icon="@drawable/ic_baseline_group_add_24"
            android:title="@string/create_group" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_baseline_people_alt_24"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_action_settings"
            android:title="@string/settings" />

    </group>
</menu>