<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/callFriend"
        android:orderInCategory="101"
        android:title="@string/private_call"
        android:icon="@drawable/show_to_smone"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_chat"
        android:orderInCategory="101"
        android:title="@string/search"
        android:icon="@drawable/clear_this_messages"
        app:showAsAction="never" />
    <item
        android:id="@+id/muteNotifications"
        android:orderInCategory="101"
        android:title="@string/mute_friend"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_leave"
        android:orderInCategory="101"
        android:title="@string/delete_friend"
        app:showAsAction="never" />


</menu>